# tcy

./: .gitignore  LICENSE  LICENSE.md  README.md  conftest.py  csp_packages.tsv  environment.yml  environment_solved_ubuntu.yml.yml  environment_solved_ubuntu_micromamba.yml  get_yml_from_csv.py  install_cran_packages.sh  install_pip_packages.sh  packages.tsv  packages_test.tsv  pyproject.toml  requirements.txt  tcy.py  test_configs.json  test_tsv_file.py  tests.py
.github/workflows/: build.yml  run-github-workflows.yml
environments/: Linux_input.yml  Linux_solved.txt  Linux_solved.yml  README.md  csp.tsv  csp_Linux_solved.txt  csp_Linux_solved.yml  environment.yml  environment_solved_ubuntu.yml  packages.tsv
environments/ubuntu-22.04/: ubuntu-22.04.yml  ubuntu-22.04_solved.txt  ubuntu-22.04_solved.yml
environments/ubuntu-24.04/: ubuntu-24.04.yml  ubuntu-24.04_solved.yml
environments/ubuntu-latest/: csp_ubuntu-latest_solved.txt  csp_ubuntu-latest_solved.yml  ubuntu-latest.yml  ubuntu-latest_solved.txt  ubuntu-latest_solved.yml  ubuntu-latest_solved_pip-requirements.txt
environments/windows-2025/: windows-2025.yml  windows-2025_solved.yml
environments/windows-latest/: csp_windows-latest_solved.txt  csp_windows-latest_solved.yml  windows-latest.yml  windows-latest_solved.txt  windows-latest_solved.yml  windows-latest_solved_pip-requirements.txt
tcy/: __init__.py  command_line.sh  conftest.py  tcy.py  test_configs.json  test_tsv_file.py
